# execAnything

./: .gitignore  AGENTS.md  README.md  plan.md  steps_to_implement.md
CODEX/: 1.codex.md  2.codex.md  3.codex.md  4.codex.md  5.codex.md  6.codex.md  7.codex.md  8.codex.md
desktop-runner/: pyproject.toml
desktop-runner/scripts/: manual_notepad_test.py
desktop-runner/src/desktop_runner/: errors.py  server.py  windows.py
desktop-runner/src/desktop_runner/actions/: __init__.py  click.py  extract.py  paste_text.py  set_value.py  step_trace.py
desktop-runner/src/desktop_runner/artifacts/: __init__.py  screenshots.py
desktop-runner/src/desktop_runner/assertions/: check.py
desktop-runner/src/desktop_runner/runtime/: __init__.py  run_state.py
desktop-runner/src/desktop_runner/selector/: __init__.py  resolve.py
desktop-runner/src/desktop_runner/uia/: __init__.py  adapter.py
desktop-runner/tests/: test_actions.py  test_assertions.py  test_extract.py  test_resolve.py  test_screenshots.py  test_server.py
docs/: architecture.md  dsl.md  recording_format_v0.md  runtime_execution.md  selector-synthesis.md  ui.md  verification-mode.md
orchestrator/: package-lock.json  (+2 more)
recorder-desktop/: pyproject.toml
recorder-desktop/src/recorder_desktop/: __init__.py  record.py  recording.py
recorder-desktop/src/recorder_desktop/capture/: screenshot.py
recorder-desktop/src/recorder_desktop/uia/: element_under_cursor.py  neighborhood.py  snapshot.py
recorder-desktop/src/recorder_desktop/win32/: hooks.py  windows.py
recorder-desktop/tests/: test_recording_format.py
(+73 files in other folders)
